# docfinance

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pylintrc  Backup-DocFinance.ps1  Check-BranchProtection.ps1  Dockerfile  Dockerfile.prod  Optimize-HomeImages.ps1  README.md  SYNC_TEST.md  Store-GitHubPAT.ps1  Sync-GitMirror.ps1  build_files.sh  compose.env  deploy.sh  docfinance-backup.sh  docker-compose.prod.yml  docker-compose.yml  logs_result.json  main.py  manage.py  openshift-secrets.yaml  openshift-template.yaml  pyproject.toml  requirements.txt  requirements_atual.txt  testeRDP.txt  vercel.json
.githooks/: post-merge.bat  post-merge.ps1
.github/workflows/: mirror.yml  optimize-home-images.yml
api/config/: settings.py  wsgi.py
config/: settings.py  urls.py  wsgi.py
deploy/nginx/: docfinance.conf
deploy/systemd/: docfinance-compose.service
documentos/: api.py  apps.py  forms.py  models.py  permissions.py  signals.py  tests.py  urls.py  views.py  views_relatorios.py
documentos/migrations/: 0001_initial.py  0002_alter_documento_fornecedor_delete_fornecedor.py  0003_alter_documento_tipo.py  0004_secretaria_recurso_alter_documento_recurso_and_more.py  0005_documento_etapa_historicodocumento.py  0006_documento_processo.py
documentos/templatetags/: custom_filters.py
fornecedores/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
fornecedores/migrations/: 0001_initial.py  0002_alter_fornecedor_cnpj_cpf_alter_fornecedor_nome.py  0003_alter_fornecedor_endereco.py  0004_alter_fornecedor_endereco.py  0005_fornecedor_agencia_fornecedor_banco_fornecedor_conta_and_more.py  0006_alter_fornecedor_agencia_alter_fornecedor_conta.py
fornecedores/templatetags/: fornecedor_filters.py
relatorios/: apps.py  urls.py  views.py
static/css/: base.css  custom.css  style.css
static/js/: documento_recursos.js  documento_validacao.js  masc_cpf_cnpj.js  notifications.js
staticfiles/css/: A4.css  admin_custom.css  base.css  custom.css  email.css  home.css  main.css
staticfiles/js/: config_print.js  masc_cpf_cnpj.js  (+3 more)
templates/: static_test.html
usuarios/: admin.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
utils/: document_validators.py
(+82 files in other folders)
